updaing numbers - lifetime and users

--- a/public/lifetime-heroes.html
+++ b/public/lifetime-heroes.html
@@ -51,6 +51,24 @@
 		<div class="container">
 			<div class="wrapper lifetimes">
 				<div>	
+					<h3>Funded "v0.2.2 - Importing, writing preferences, notes, Focus mode..." - 15 Heroes<span>Released 12 October 2015 - <a href="http://blog.novlr.org/release-notes-novlr-v0-2-2/ ">read the release blog</a></span></h3>
+					<ul>
+						<li>Anna Lishman</li>
+						<li>Melanie Cotter</li>
+						<li>Jack Regnart</li>
+						<li>Travis Starnes</li>
+						<li>Ben Zuffi</li>
+						<li>Derek Ardolf</li>
+						<li>Jin Choung</li>
+						<li>Steve Grant</li>
+						<li>Jim McNelis</li>
+						<li>Teresa Horne</li>
+						<li>Faraz Hasan</li>
+						<li>Dave Floyd</li>
+						<li>Lou Yardley</li>
+						<li>Katarina Skarbinec</li>
+						<li>Louise Holt</li>
+					</ul><br><br>					
 					<h3>Funded "Multiple novels" - 6 Heroes<span>Released 1 September 2015 - <a href="http://blog.novlr.org/release-blog-0-2-0-redesign-multiple-novels-user-statistics-and-more/">read the release blog</a></span></h3>
 					<ul>
 						<li>Andrew Hodges</li>
